# langgraph-course

./: .env.example  .gitignore  checkpoints.db  checkpoints.sqlite  checkpoints.sqlite-shm  checkpoints.sqlite-wal  langgraph.json  notebook.ipynb  pyproject.toml
app/: main.py
app/agents/copilot/: agent.py  config.py  nodes.py  schemas.py  state.py
app/agents/long_running/: agent.py  nodes.py
app/config/: database.py  settings.py
app/routers/: chat.py
src/agents/long_running/: agent.py  config.py  nodes.py  state.py
